--- a/package.json
+++ b/package.json
@@ -1,30 +1,68 @@
 {
-    "name": "node-red-contrib-kafka-node-latest",
-    "version": "0.2.1",
-    "description": "Patch for Node-RED nodes of HighLevel Kafka Producer and Consumer",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/xuren87/node-red-contrib-kafkanode"
-    },
-    "license": "Apache",
-    "keywords": [
-        "node-red",
-        "kafka",
-        "kafka producer",
-        "kafka consumer",
-        "nodered",
-        "nodered kafka"
-    ],
-    "node-red": {
-        "nodes": {
-            "kafka": "kafka.js"
-        }
-    },
-    "author": "Lucas Ren",
-    "dependencies": {
-        "kafka-node": "^4.1.1"
-    },
-    "devDependencies": {
-        "kafka-node": "^4.1.1"
+  "_args": [
+    [
+      "/home/yehuda/Development/node-red-contrib-kafkanode/",
+      "/home/yehuda/.node-red"
+    ]
+  ],
+  "_from": "../Development/node-red-contrib-kafkanode",
+  "_id": "node-red-contrib-kafka-node-latest@0.2.1",
+  "_inCache": true,
+  "_installable": true,
+  "_location": "/node-red-contrib-kafka-node-latest",
+  "_phantomChildren": {},
+  "_requested": {
+    "name": null,
+    "raw": "/home/yehuda/Development/node-red-contrib-kafkanode/",
+    "rawSpec": "/home/yehuda/Development/node-red-contrib-kafkanode/",
+    "scope": null,
+    "spec": "/home/yehuda/Development/node-red-contrib-kafkanode",
+    "type": "directory"
+  },
+  "_requiredBy": [
+    "#USER"
+  ],
+  "_resolved": "file:../Development/node-red-contrib-kafkanode",
+  "_shasum": "79af73a82692a693f9b32dc59410c32034448a73",
+  "_shrinkwrap": null,
+  "_spec": "/home/yehuda/Development/node-red-contrib-kafkanode/",
+  "_where": "/home/yehuda/.node-red",
+  "author": {
+    "name": "Lucas Ren"
+  },
+  "bugs": {
+    "url": "https://github.com/xuren87/node-red-contrib-kafkanode/issues"
+  },
+  "dependencies": {
+    "kafka-node": "^4.1.1"
+  },
+  "description": "Patch for Node-RED nodes of HighLevel Kafka Producer and Consumer",
+  "devDependencies": {
+    "kafka-node": "^4.1.1"
+  },
+  "gitHead": "ed4cde95cdba28af4e764ec532cf3dca8e53f962",
+  "homepage": "https://github.com/xuren87/node-red-contrib-kafkanode#readme",
+  "keywords": [
+    "kafka",
+    "kafka consumer",
+    "kafka producer",
+    "node-red",
+    "nodered",
+    "nodered kafka"
+  ],
+  "license": "Apache",
+  "name": "node-red-contrib-kafka-node-latest",
+  "node-red": {
+    "nodes": {
+      "kafka": "kafka.js"
     }
+  },
+  "optionalDependencies": {},
+  "readme": "PATCHED VERSION OF https://www.npmjs.com/package/node-red-contrib-kafka-node-latest\n\n# Kafka Node\nKafka node can produce/consume the mesasges to/from kafka cluster along with topic on [NodeRED](http://nodered.org).\n\n\n## Install\n\nInstall from [npm](http://npmjs.org)\n```\nnpm install -g node-red-contrib-kafka-node-latest\n```\n\n## Prerequisites\n * Node-RED platform. (see [Node-RED](http://nodered.org/docs/getting-started/installation.html))\n * Kafka cluster (see [Kafka](http://kafka.apache.org/documentation.html#gettingStarted)). \n * Some topics (see [How to create a topic](http://kafka.apache.org/documentation.html#quickstart))\n\n## Usage\n##### Producer Node\n\n![Alt text](https://github.com/fwang7/node-red-contrib-kafka-node/blob/screenshot/imgs/producer.jpg?raw=true \"Producer Example\")\n\n###### Parameters:\n - brokerUrl - <i>The brokerUrl of Kafka.\n - Topic - <i>The topic of message to produce.\n\n##### Consumer Node\n\n![Alt text](https://github.com/fwang7/node-red-contrib-kafka-node/blob/screenshot/imgs/consumer.jpg?raw=true \"Consumer Example\")\n\n###### Parameters:\n - brokerUrl - <i>TThe brokerUrl of Kafka.\n - Topic - <i>The topic of message to produce.\n - GroupId - <i> The group ID.\n> Group ID is a string that uniquely identifies the group of consumer processes to which this consumer belongs. By setting the same group id multiple processes indicate that they are all part of the same consumer group.\n\n\n## Version\n0.1.5\n\n## Tech\n * [Kafka](http://kafka.apache.org/) - Apache Kafka is publish-subscribe messaging rethought as a distributed commit log.\n * [Zookeeper](https://zookeeper.apache.org/) - ZooKeeper is a centralized service for maintaining configuration information, naming, providing distributed synchronization, and providing group services.\n * [Kafka-Node](https://www.npmjs.com/package/kafka-node) - Kafka-node is a Node.js client with Zookeeper integration for Apache Kafka 0.8.1 and later. \n\n\n## Authors\n* Lucas Ren - [nichokiki@hotmail.com](mailto:nichokiki@hotmail.com)",
+  "readmeFilename": "README.md",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/xuren87/node-red-contrib-kafkanode.git"
+  },
+  "version": "0.2.1"
 }
